<resources>
    <string name="app_name">IPCalculator++</string>
    <string name="IPInputHint">Enter IP Address</string>
    <string name="Slash">/</string>
    <string name="mNetmask">Netmask</string>
    <string name="Calculate">Calculate</string>
    <string name="IPAddressKey">IP Address</string>
    <string name="NetmaskKey">Netmask</string>
    <string name="WildcardKey">Wildcard</string>
    <string name="NetworkKey">Network</string>
    <string name="BroadcastKey">Broadcast</string>
    <string name="MinHostKey">Min Host</string>
    <string name="MaxHostKey">Max Host</string>
    <string name="HostCount">Host Count</string>
    <string name="Binary">+binary</string>
    <string name="BinaryInput">Binary</string>
    <string name="EXCEPTION_IP4_ADDRESS">IP address should match the pattern [0–255].[0–255].[0–255].[0–255]</string>
    <string name="EXCEPTION_IP4_ADDRESS_BINARY">IP address should match the pattern [0–11111111] [0–11111111] [0–11111111] [0–11111111]</string>
    <string name="EXCEPTION_NETMASK_VALUE">Netmask value should be integer number from 1 to 32</string>
    <string name="EXCEPTION_NETMASK">Netmask octets should match the pattern [0|128|192|224|240|248|252|254]</string>
    <string name="EXCEPTION_NETMASK_BINARY">Netmask octets should match the pattern [1000|1100|1110|1111]</string>
</resources>
