<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cherry.vitas.ipcalculator.MainActivity">

    <TextView
        android:id="@+id/ApplicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/InputView"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/ApplicationName"
        app:layout_constraintStart_toStartOf="@+id/ApplicationName"
        app:layout_constraintTop_toBottomOf="@+id/ApplicationName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/IPAddressInput"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/IPInputHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/InputView"
        app:layout_constraintLeft_toLeftOf="@+id/InputView"
        app:layout_constraintTop_toTopOf="@+id/InputView"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/IPAddressNetmaskSplitter"
        android:layout_width="16dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/Slash"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/InputView"
        app:layout_constraintLeft_toRightOf="@+id/IPAddressInput"
        app:layout_constraintRight_toLeftOf="@+id/NetmaskInput"
        app:layout_constraintTop_toTopOf="@+id/InputView" />

    <EditText
        android:id="@+id/NetmaskInput"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/mNetmask"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/InputView"
        app:layout_constraintEnd_toEndOf="@+id/InputView"
        app:layout_constraintTop_toTopOf="@+id/InputView"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/IPCalculatorResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalculateButton"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/CalculateButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:onClick="onClickCalculate"
        android:text="@string/Calculate"
        app:layout_constraintEnd_toEndOf="@+id/InputView"
        app:layout_constraintStart_toStartOf="@+id/IPAddressInput"
        app:layout_constraintTop_toBottomOf="@+id/InputView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/CalculateBinary"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:fontFamily="monospace"
        android:text="@string/Binary"
        app:layout_constraintBottom_toBottomOf="@+id/CalculateButton"
        app:layout_constraintLeft_toRightOf="@+id/CalculateButton"
        app:layout_constraintTop_toTopOf="@+id/CalculateButton" />

    <TextView
        android:id="@+id/IPAddressKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/IPAddressKey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toTopOf="@+id/IPCalculatorResult" />

    <TextView
        android:id="@+id/NetmaskKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/NetmaskKey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toBottomOf="@+id/IPAddressKey" />

    <TextView
        android:id="@+id/WildcardKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/WildcardKey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toBottomOf="@+id/NetmaskKey" />

    <TextView
        android:id="@+id/NetworkKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/NetworkKey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toBottomOf="@+id/WildcardKey"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/BroadcastKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/BroadcastKey"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/IPCalculatorResult"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/NetworkKey"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/MinHostKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/MinHostKey"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toBottomOf="@+id/BroadcastKey" />

    <TextView
        android:id="@+id/MaxHostKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/MaxHostKey"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/MinHostKey"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/IPCalculatorResult"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/MaxHostCountKey"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/HostCount"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/IPCalculatorResult"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/MaxHostKey"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/IPAddressValue"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/IPAddressKey"
        app:layout_constraintTop_toTopOf="@+id/IPCalculatorResult"
        app:layout_constraintBottom_toBottomOf="@+id/IPAddressKey"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/NetmaskValue"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/NetmaskKey"
        app:layout_constraintTop_toBottomOf="@+id/IPAddressValue"
        app:layout_constraintBottom_toBottomOf="@+id/NetmaskKey"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/WildcardValue"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/WildcardKey"
        app:layout_constraintTop_toBottomOf="@+id/NetmaskValue"
        app:layout_constraintBottom_toBottomOf="@+id/WildcardKey"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/NetworkValue"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/NetworkKey"
        app:layout_constraintBottom_toBottomOf="@+id/NetworkKey"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="@+id/NetworkKey"
        android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/BroadcastValue"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/BroadcastKey"
        app:layout_constraintTop_toBottomOf="@+id/NetworkValue"
        app:layout_constraintBottom_toBottomOf="@+id/BroadcastKey"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/MinHostValue"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/MinHostKey"
        app:layout_constraintTop_toBottomOf="@+id/BroadcastValue"
        app:layout_constraintBottom_toBottomOf="@+id/MinHostKey"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/MaxHostValue"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/MaxHostKey"
        app:layout_constraintTop_toBottomOf="@+id/MinHostValue"
        app:layout_constraintBottom_toBottomOf="@+id/MaxHostKey"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/MaxHostCount"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="0dp"
        android:fontFamily="monospace"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/MaxHostCountKey"
        app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toBottomOf="@+id/MaxHostValue"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/MaxHostCountKey"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/IPAddressBitString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="12dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/IPAddressValue"
        app:layout_constraintLeft_toRightOf="@+id/IPAddressValue"
        app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toTopOf="@+id/IPAddressValue"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/NetmaskBitString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="12dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/NetmaskValue"
        app:layout_constraintLeft_toRightOf="@+id/NetmaskValue"
        app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toTopOf="@+id/NetmaskValue"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/WildcardBitString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="12dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/WildcardValue"
        app:layout_constraintLeft_toRightOf="@+id/WildcardValue"
        app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toTopOf="@+id/WildcardValue"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/NetworkBitString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="12dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/NetworkValue"
        app:layout_constraintLeft_toRightOf="@+id/NetworkValue"
        app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toTopOf="@+id/NetworkValue"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/BroadcastBitString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="12dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/BroadcastValue"
        app:layout_constraintLeft_toRightOf="@+id/BroadcastValue"
        app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toTopOf="@+id/BroadcastValue"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/MinHostBitString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="12dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/MinHostValue"
        app:layout_constraintLeft_toRightOf="@+id/MinHostValue"
        app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toTopOf="@+id/MinHostValue"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/MaxHostBitString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="12dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/MaxHostValue"
        app:layout_constraintLeft_toRightOf="@+id/MaxHostValue"
        app:layout_constraintRight_toRightOf="@+id/IPCalculatorResult"
        app:layout_constraintTop_toTopOf="@+id/MaxHostValue"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <CheckBox
        android:id="@+id/BinaryInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/BinaryInput"
        app:layout_constraintBottom_toBottomOf="@+id/InputView"
        app:layout_constraintEnd_toEndOf="@+id/CalculateBinary"
        app:layout_constraintStart_toEndOf="@+id/NetmaskInput"
        app:layout_constraintTop_toTopOf="@+id/InputView" />


</android.support.constraint.ConstraintLayout>
